<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
    	android:layout_height="fill_parent" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		
		    
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|center_vertical"
	        android:src="@drawable/biglogo" 
	        android:contentDescription="@string/app_name"/>
	
	    <EditText
	        android:id="@+id/emailLogin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/login_email"
	        android:inputType="textEmailAddress" >
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/senhaLogin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/login_senha"
	        android:inputType="textPassword" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal|center_vertical" >

	        <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="cadastrar"
	            android:text="@string/login_cadastrar" />

	        <Button
	            android:id="@+id/button2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="entrar"
	            android:text="@string/login_btn_login" />

	    </LinearLayout>
	
	    <ProgressBar
	        android:id="@+id/loginProgressBar"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    
	
	</LinearLayout>
</ScrollView>
