<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/widget44"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
	        android:orientation="vertical" >
	        
            <TextView
				android:id="@+id/lblActGrupoTrajetoTitulo"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblActGrupoTrajetoTitulo"
				android:textSize="18sp"
				android:textColor="#ffcccccc"
				android:gravity="center" />

			<TextView
			    android:id="@+id/lblActGrupoTrajetoNomeGrupo"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center|left"
			    android:text="@string/lblActGrupoTrajetoNomeGrupo" />
			
			<EditText
			    android:id="@+id/txtActGrupoTrajetoNomeGrupo"
			    android:layout_width="fill_parent"
			    android:singleLine="true"
			    android:layout_height="wrap_content" />
			
			<TextView
			    android:id="@+id/lblActGrupoTrajetoLocalEncontro"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center|left"
			    android:text="@string/lblActGrupoTrajetoLocalEncontro" />
			
			<EditText
			    android:id="@+id/txtActGrupoTrajetoLocalEncontro"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:singleLine="true"
			    android:textSize="18sp" />

            
			<TextView
			    android:id="@+id/lblActGrupoTrajetoLocalDestino"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="left"
			    android:text="@string/lblActGrupoTrajetoLocalDestino" />

			<EditText
			    android:id="@+id/txtActGrupoTrajetoGrupoLocalDestino"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:singleLine="true"
			    android:textSize="18sp" />
			
			<TextView
			    android:id="@+id/lblActGrupoTrajetoDataSaida"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center|left"
			    android:text="@string/lblActGrupoTrajetoDataSaida" />
			
			<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                
               <Spinner
                android:id="@+id/cboActGrupoTrajetoDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
                <Spinner
                android:id="@+id/cboActGrupoTrajetoMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
                 <Spinner
                android:id="@+id/cboActGrupoTrajetoAno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                
            </LinearLayout>
            
			<TextView
			    android:id="@+id/lblActGrupoTrajetoHoraSaida"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center|left"
			    android:text="@string/lblActGrupoTrajetoHoraSaida" />
			
			
			<TimePicker
			    android:id="@+id/timePickerActGrupoTrajetoHoraSaida"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" />
				

		    
	        
        </LinearLayout>
    </ScrollView>
</LinearLayout>